测试bufflist属性，定时给服务器发消息

--- a/CClient.csproj
+++ b/CClient.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="main.cs" />
+    <Compile Include="NetUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
