客户端和服务器不用考虑启动的先后顺序

--- a/CClient.csproj
+++ b/CClient.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="IOSocket.cs" />
     <Compile Include="main.cs" />
+    <Compile Include="NetMsgDefine.cs" />
     <Compile Include="NetUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
